--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Digital Pixelated Clock</title>
+<meta name="theme-color" content="#000000">
 <style>
   body {
     margin: 0;
@@ -15,9 +16,9 @@
     height: 100vh;
     background-color: black;
     color: green;
+    font-family: "Courier New", Courier, monospace;
   }
   #clock {
-    font-family: "Courier New", Courier, monospace;
     font-size: 40px;
     font-weight: bold;
   }
